--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Monte Ré</title>
+	<title>Monte Ré/Contacto</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
@@ -11,10 +11,10 @@
 	<!--GOOGLE FONTS-->
 	<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">  
 	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">  
-
+	<link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet"> 
 </head>
 <body>
-	<header class="frutos">
+	<header class="contacto" id="contacto1">
 		<!--NAVBAR-->	
 		<a class="logo" href="index.html"><img src="img/logo.png" class="img-fluid mx-auto d-block" alt=""></a>
 		<div class="navbarfixed d-none d-md-block">
@@ -34,36 +34,29 @@
 				</li>
 			</ul>
 		</div>
-	</header>
-	<main>
-		<!--CARD GROUP-->
-		<div class="card-group">
-			<div class="card bg-dark text-white">
-				<img src="img/card3.jpg" class="card-img" alt="...">
-				<div class="card-img-overlay">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-					<p class="card-text"></p>
-				</div>
-			</div>
-			<div class="card bg-dark text-white">
-				<img src="img/card2.jpg" class="card-img" alt="...">
-				<div class="card-img-overlay">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-					<p class="card-text"></p>
-				</div>
-			</div>
-		</div>		
-		<div class="card bg-dark text-white">
-			<img src="img/div.jpg" class="card-img" alt="...">
-			<div class="card-img-overlay">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-				<p class="card-text">Last updated 3 mins ago</p>
-			</div>
+		<div class="carousel-caption d-none d-sm-block">
+			<img src="img/s4.png" alt="">
+			<br><br>
+			<h1>CONTACTANOS</h1>
+			<p>Stradello Aggazzotti, 90 - 41126 S. Maria di Mugnano Modena - Italy <br><br>
+			Ph. +39 059 460 124 - Fax +39 059 460 477 </p>
+
 		</div>
+	</header>
+	<main class="white">
+		<p>Lunes-Jueves > 8:30 - 16:30 <br> Viernes > 8:30 - 17:30</p>
+		<p class="texto">Ingresa tus datos.</p>
 	</main>
+	<form>
+		<div class="form-group">
+			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre Completo">
+			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Correo electronico">
+			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Telefono">
+			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Asunto">
+			<textarea type="text" class="form-control" id="exampleFormControlTextarea1" placeholder="Mensaje" rows="3"></textarea>
+			<center><button type="button" class="btn btn-outline-secondary">Enviar</button></center>
+		</div>
+	</form>
 	<div class="purple">
 		<a href="index.html">
 			<img class="mx-auto d-block" src="img/logo.png" alt="">
@@ -76,7 +69,7 @@
 				<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Correo electronico">
 			</div>
 		</form>
-		<a href="index.html">
+		<a href="#contacto1">
 			<img class="mx-auto d-block" src="img/logo.png" alt="">
 		</a>
 	</div>
