--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
+
+	<!--GOOGLE FONTS-->
+	<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">  
+
 </head>
 <body>
 	<header>
 		<!--NAVBAR-->	
 		<a class="logo" href="index.html"><img src="img/logo.png" class="img-fluid mx-auto d-block" alt=""></a>
-		<div class="navbarfixed">
+		<div class="navbarfixed d-none d-md-block">
 			<ul class="nav nav-pills nav-fill">
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item dd" href="frutos.html">Frutos Secos</a>
-						<a class="dropdown-item dd" href="organico.html">Organico</a>
+						<a class="dropdown-item dd" href="frutos.html">Organico</a>
 					</div>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">NOSOTROS</a>
+					<a class="nav-link" href="contacto.html">NOSOTROS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">CONTACTO</a>
+					<a class="nav-link" href="contacto.html">CONTACTO</a>
 				</li>
 			</ul>
 		</div>
@@ -35,23 +40,23 @@
 			<div class="carousel-inner" role="listbox">
 				<!--Slide 1-->
 				<div class="carousel-item active s1" data-interval="5000">
-					<div class="carousel-caption d-none d-md-block">
-						<h1>HEALTHY AND WELLNESS</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, veniam!</p>
+					<div class="carousel-caption d-none d-sm-block">
+						<h1>SALUD Y BIENESTAR <small>TODOS LOS DIAS</small></h1>
+						<h5>Llevamos a tu mesa salud y productos certificados</h5>
 					</div>
 				</div>
 				<!--Slide 2-->
 				<div class="carousel-item s2" data-interval="5000">
 					<div class="carousel-caption d-none d-md-block">
-						<h3>First Slide</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, veniam!</p>
+						<h1>EL MEJOR SABOR <br><small>DESDE ITALIA</small></h1>
+						<h5>Llevamos a tu mesa salud y productos certificados</h5>
 					</div>
 				</div>
 				<!--Slide 3-->
 				<div class="carousel-item s3" data-interval="5000">
 					<div class="carousel-caption d-none d-md-block">
-						<h3>First Slide</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, veniam!</p>
+						<h1>CALIDAD <br><small>DESDE EL ORIGEN</small></h1>
+						<h5>Llevamos a tu mesa salud y productos certificados</h5>	
 					</div>
 				</div>				
 			</div>
@@ -71,17 +76,15 @@
 			<div class="card bg-dark text-white">
 				<img src="img/card3.jpg" class="card-img" alt="...">
 				<div class="card-img-overlay">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-					<p class="card-text"></p>
+					<img src="img/s1.png" alt="">
+					<h2 class="card-title">Asi nacen nuestros productos</h2>					
 				</div>
 			</div>
 			<div class="card bg-dark text-white">
 				<img src="img/card2.jpg" class="card-img" alt="...">
 				<div class="card-img-overlay">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-					<p class="card-text"></p>
+					<img src="img/s4.png" alt="">
+					<h2 class="card-title">NOTICIAS Y EVENTOS</h2>
 				</div>
 			</div>
 		</div>		
