--- a/organico.html
+++ b/organico.html
@@ -2,24 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FRUTOS SECOS</title>
+	<title>Monte Ré</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
+
+	<!--GOOGLE FONTS-->
+	<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">  
+
 </head>
 <body>
-	<header>
-		<!--NAVBAR-->
-		<div class="organic">	
+	<header class="organico">
+		<!--NAVBAR-->	
 		<a class="logo" href="index.html"><img src="img/logo.png" class="img-fluid mx-auto d-block" alt=""></a>
-		<div class="navbarfixed">
+		<div class="navbarfixed d-none d-md-block">
 			<ul class="nav nav-pills nav-fill">
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item dd" href="#">Frutos Secos</a>
-						<a class="dropdown-item dd" href="#">Organico</a>
+						<a class="dropdown-item dd" href="frutos.html">Frutos Secos</a>
+						<a class="dropdown-item dd" href="organico.html">Organico</a>
 					</div>
 				</li>
 				<li class="nav-item">
@@ -30,8 +34,6 @@
 				</li>
 			</ul>
 		</div>
-		</div>
-		
 	</header>
 	<main>
 		<!--CARD GROUP-->
