--- a/nacen.html
+++ b/nacen.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-	<header class="frutos">
+	<header class="ciclo">
 		<!--NAVBAR-->	
 		<a class="logo" href="index.html"><img src="img/logo.png" class="img-fluid mx-auto d-block" alt=""></a>
 		<div class="navbarfixed d-none d-md-block">
@@ -58,7 +58,7 @@
 		<div class="card bg-dark text-white">
 			<img src="img/div.jpg" class="card-img" alt="...">
 			<div class="card-img-overlay">
-				<h5 class="card-title">Card title</h5>
+				<h3 class="card-title">Card title</h3>
 				<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 				<p class="card-text">Last updated 3 mins ago</p>
 			</div>
